--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
         <button id="blue_button">
             Blue
         </button>
-        <!--
-            TODO 1
-            Add the HTML for a pink button
-        -->
+        <button id="pink_button">
+            Pink
+        </button>
         <div id="color_box" class="gray">
         </div>
     </section>
